13606 tic(1) writes uninitialized data to some terminfo entries Reviewed by: Andy Fiddaman <andy@omnios.org> Reviewed by: Jason King <jason.brian.king+illumos@gmail.com> Approved by: Robert Mustacchi <rm@fingolfin.org>